feat: add example for spring factorybean